--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "npm run build && node deploy.js"
   },
   "dependencies": {
+    "arweave": "^1.14.4",
     "axios": "^1.6.1",
+    "child_process": "^1.0.2",
+    "dotenv": "^16.3.1",
+    "fs": "^0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "warp-contracts": "^1.4.22"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
